tests/lexer/invalid/02_unterminated_string.src
// Незакрытая строка
"unterminated string
int x = 42;